# ReportBook

./: Cargo.toml  README.md  macos-run.sh  package.json  pnpm-lock.yaml  release.sh
.cargo/: config
.github/workflows/: build.yml  bundle.yml  rust.yml
src/: app.html  app.rs  file_handler.rs  httphandler.rs  main.rs  process.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/reportbook/: file_handler.rs  mod.rs  process.rs  reportbook.rs
src-tauri/src/reportbook/datagatherers/: installed.rs  processes.rs
src/datagatherers/: hosts.rs  installed.rs  mod.rs  processes.rs
src/lib/: stores.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/glyph/: Check.svelte  Copy.svelte  Loading.svelte  Shield.svelte  Upload.svelte
src/routes/report/: +page.svelte
