[package]
name = "reportbook"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reportbook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32.0"
installed = "=0.1.0"
cpuid = "0.1.1"
whoami = "1.5.1"
machine-info = "1.0.6"
ureq = { version = "2.9.6", default-features = false, features = ["native-tls"] }
native-tls = "0.2.11"
open = "5.3.0"
chrono = "0.4.38"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

